styles.css
* {
    font-family: Roboto;  /* check how to function*/ 
    margin: 0;
    padding: 0;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

a,
.footer,
.actiontext,
.promotiontext {
      color: #E5E7EB;
}


.header,
.promotion,
.footer  {
    background-color: #1F2937;
}

.header,
.headerlink {
    display: flex;
    flex-direction: row;
}

.header {
    justify-content: space-between;
    align-items: flex-end;
    height: 50px;
}

.headertitle {
    font-size: 24px;
    font-weight: 700;
    color: #f9faf8;
    margin-left: 150px;
}

.headerlink {
    gap: 20px;
    margin-right: 150px;
}

.promotion {
    display: flex;
    flex-direction: row;
    padding: 150px;
}

.promotiontitle {
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
    margin-bottom: 20px;
}

.promotiontext {
    margin-bottom: 20px;
}

.promotionleft {
    flex: 1; 
    font-size: 18px;
    gap: 20px;
}


.promotionright {
    flex: 1;
    border: 1px solid white;

}
/* check how to center the image in a box */

.signup1,
.signup2  {
    background-color: #3882F6 ;
    border-radius: 10px;
    border: none;
    padding: 8px 38px;
    color: #f9faf8;
    font-weight: bold;
    font-size: 18px;
}

.introduction {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.introtitle {
    font-size: 36px;
    font-weight: 700;
    color: #1F2937;
    margin: 55px;
}

.Agents {
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
    margin-bottom: 130px;
}

.intro img {
    border-radius: 30px;
    border: 4px solid #3882F6;
    margin-bottom: 10px;
}

.intro {
    width: 170px;
    color: #767676;
}

.quote {
    display: flex;
    flex-direction: column;
    padding: 100px 260px;
    background-color: #E5E7EB;
    font-size: 36px;
    font-style: italic;
    font-weight: 400;  /* check how to make light font on mac*/
    color: #1F2937;
}

.quoteperson {
    display: flex;
    justify-content: flex-end;
    font-size: 25px;
    font-weight: bold;
}

.action {
    background-color: #3882F6;
    border-radius: 10px;
    margin: 80px 120px;
    padding: 50px 140px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.actiontitle {
    font-size: 25px;
    font-weight: bold;
    color: #f9faf8;
    margin-bottom: 5px;
}

.actiontext {
    font-size: 18px;
}

.signup2 {
    border: 1px solid
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 80px;
    flex: 1;
    font-size: 18px;
}

